# pybind_game_of_life

./: .gitignore  CMakeLists.txt  README.md  tree.txt
examples/: benchmark.py  demo_matplotlib.py  demo_patterns.py  demo_two_ring_explosion.py  spaceship_119P4H1V0.py  test_numpy.py  test_world.py
src/: bindings.cpp  world.cpp  world.hpp
